quick implementation of most of ggraph/ggforce

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,6 +71,9 @@ Suggests:
     processx,
     plotlyGeoAssets,
     forcats
+Enhances:
+    ggforce,
+    ggraph
 LazyData: true
 RoxygenNote: 6.0.1.9000
 Encoding: UTF-8
